[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paypaython-aws"
version = "1.0.0"
description = "Python SDK for PayPay Mobile API with AWS CAPTCHA solver"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "PayPay Mobile Contributors"}]
keywords = ["paypay", "payment", "mobile", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/paypay-mobile"
Repository = "https://github.com/yourusername/paypay-mobile"
Issues = "https://github.com/yourusername/paypay-mobile/issues"
